2026/04/03ログ追加　タン